2006-12-22  Akim Demaille  <demaille@gostai.com>

	Add missing trunk
	* svn-externals: For alias urbivalid.

2006-12-22  Akim Demaille  <demaille@gostai.com>

	svn-externals: urbivalid
	* svn-externals (url_aliases): Catch unknown aliases.
	Add an alias for urbivalid.

2006-12-19  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix typo.
	* test.sh.in: Add missing dollars.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	More warnings
	* urbi-prog-cxx.m4: here.

2006-12-15  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Remove more spurious warnings from VC++.
	* urbi-prog-cxx.m4: Here. Also sort the warnings in numerical order.
          (MSVC_CXXFLAGS): New.

2006-12-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Detect more Windows platforms.
	* test.sh.in: Detect MingW, Interix and other Windows environments.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Suppress more warnings on VC++.
	* urbi-prog-cxx.m4: Here.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Tweak flags and define WIN32 for VC++.
	* urbi-prog-cxx.m4: Here.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	More restyling
	* restyle: !strcmp -> STREQ.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Always remove useless parens for returns.
	* restyle: here.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	More restyle
	* reindent: Rename as...
	* restyle: this.
	Also handle comments behind }.
	* svn-externals: Add sdk.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	More restyling
	* build-aux/reindent: Rename as...
	* build-aux/restyle: this.
	(&stderr): New.
	(&update_file): Say when a file is changed.
	(&clear_closing_brace): Strip comments behind the }s.
	* build-aux/README: Adjust.

2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Move some files to the new sdk folder.
        Now in common/sdk:
	* param-pc.mk.in: Remove.
	* umake.in: Remove.
	* urbi-dirs.m4: Remove.
	* urbi-engine.ac: Remove.
	* urbi-sdk.m4: Remove.
