@@ -1,3 +1,9 @@
+2006-12-23  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Fix compilation of big C++ parsers generated by Bison on MIPS GCC.
+	* urbi-prog-cxx.m4 (PARSER_CXXFLAGS): Add -Wa,-relax-branch, an
+	  assembler option used to work around GCC's "bug".
+
 2006-12-22  Akim Demaille  <demaille@gostai.com>
 
 	Add missing trunk
